--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=5.0">
-    <meta name="description" content="Instagram app by @karlhadwen">
+    <meta name="description" content="Instagram app">
 
     <title>Instagram Clone Tailwind</title>
     <style>
